--- a/Review Carousel/styles.css
+++ b/Review Carousel/styles.css
@@ -71,6 +71,11 @@ button{
     cursor: pointer;
     transition: all 300ms ease;
 }
+.button-container button {
+   margin: 1rem 0 0;
+   width: 50px;
+   height: 50px;
+}
 
 button:hover{
     color: lightblue;
