--- a/Responsive NavBar/styles.css
+++ b/Responsive NavBar/styles.css
@@ -132,6 +132,12 @@ aside{
         width: 40%;
     }
 }
+@media(max-width: 400px){
+    aside{
+        width: 70%;
+    }
+}
+
 @media(max-width: 300px){
     aside{
         width: 70%;
